Updated for Wk2 assignment, basic layout in notebook file

--- a/Coursera_Capstone.ipynb
+++ b/Coursera_Capstone.ipynb
@@ -4,23 +4,357 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This Jupyter notebook file is for Coursera Capstone project (WK1). \n",
+    "This Jupyter notebook file is for the final Coursera Capstone project as part of the Applied Data Science specialization by IBM. \n",
     "\n",
-    "It is the 4th part of the Applied Data Science specialization on Coursera provided by IBM. "
+    "As a final assignment, the goal is to come up with an idea to use the provided accident data to predict the various accidents' severity. Important factors are the project validity and relevance towards the community or a group of people. \n",
+    "\n",
+    "For this the **CR**oss **I**ndustry **S**tandard **P**rocess for **D**ata **M**ining (CRISP-DM) approach is used. With CRISP-DM the following 6 steps are used:\n",
+    "1. Business Understanding\n",
+    "2. Data Understanding\n",
+    "3. Data Preparation\n",
+    "4. Modeling\n",
+    "5. Evaluation\n",
+    "6. Deployment\n",
+    "\n",
+    "The first 5 steps will be shown below, the last step \"6. Deployment\" is this documentation.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data-Collisions.csv loaded\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Before beginning, the following libraries are imported and the CSV data file is loaded\n",
+    "\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "source = 'https://s3.us.cloud-object-storage.appdomain.cloud/cf-courses-data/CognitiveClass/DP0701EN/version-2/Data-Collisions.csv'\n",
+    "df_raw = pd.read_csv(source, index_col = False)\n",
+    "\n",
+    "print('Data-Collisions.csv loaded')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Business Understanding\n",
+    "\n",
+    "What is the application perspective to the project's objective\n",
+    "\n",
+    "Mainly text (WEEK 1 GOAL)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# For the fist assignment import numpy, panda's and print the text Hello Capstoe Project Course\n",
+    "# Script for 1. Bus.Und. if required"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. Data Understanding\n",
     "\n",
-    "import numpy as np\n",
-    "import pandas as np\n",
+    "What are usefull attributes/colums for modeling (WEEK 1 GOAL)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Script for 2. Data Und. if required"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. Data Preparation\n",
     "\n",
-    "print('Hello Capstone Project Course')"
+    "All requirements to create the final dataset for modeling\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SEVERITYCODE</th>\n",
+       "      <th>X</th>\n",
+       "      <th>Y</th>\n",
+       "      <th>INCKEY</th>\n",
+       "      <th>COLDETKEY</th>\n",
+       "      <th>REPORTNO</th>\n",
+       "      <th>STATUS</th>\n",
+       "      <th>ADDRTYPE</th>\n",
+       "      <th>INTKEY</th>\n",
+       "      <th>LOCATION</th>\n",
+       "      <th>...</th>\n",
+       "      <th>ROADCOND</th>\n",
+       "      <th>LIGHTCOND</th>\n",
+       "      <th>PEDROWNOTGRNT</th>\n",
+       "      <th>SDOTCOLNUM</th>\n",
+       "      <th>SPEEDING</th>\n",
+       "      <th>ST_COLCODE</th>\n",
+       "      <th>ST_COLDESC</th>\n",
+       "      <th>SEGLANEKEY</th>\n",
+       "      <th>CROSSWALKKEY</th>\n",
+       "      <th>HITPARKEDCAR</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>-122.323148</td>\n",
+       "      <td>47.703140</td>\n",
+       "      <td>1307</td>\n",
+       "      <td>1307</td>\n",
+       "      <td>3502005</td>\n",
+       "      <td>Matched</td>\n",
+       "      <td>Intersection</td>\n",
+       "      <td>37475.0</td>\n",
+       "      <td>5TH AVE NE AND NE 103RD ST</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Wet</td>\n",
+       "      <td>Daylight</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Entering at angle</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>-122.347294</td>\n",
+       "      <td>47.647172</td>\n",
+       "      <td>52200</td>\n",
+       "      <td>52200</td>\n",
+       "      <td>2607959</td>\n",
+       "      <td>Matched</td>\n",
+       "      <td>Block</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>AURORA BR BETWEEN RAYE ST AND BRIDGE WAY N</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Wet</td>\n",
+       "      <td>Dark - Street Lights On</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6354039.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>11</td>\n",
+       "      <td>From same direction - both going straight - bo...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>-122.334540</td>\n",
+       "      <td>47.607871</td>\n",
+       "      <td>26700</td>\n",
+       "      <td>26700</td>\n",
+       "      <td>1482393</td>\n",
+       "      <td>Matched</td>\n",
+       "      <td>Block</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4TH AVE BETWEEN SENECA ST AND UNIVERSITY ST</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Dry</td>\n",
+       "      <td>Daylight</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4323031.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>32</td>\n",
+       "      <td>One parked--one moving</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>-122.334803</td>\n",
+       "      <td>47.604803</td>\n",
+       "      <td>1144</td>\n",
+       "      <td>1144</td>\n",
+       "      <td>3503937</td>\n",
+       "      <td>Matched</td>\n",
+       "      <td>Block</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2ND AVE BETWEEN MARION ST AND MADISON ST</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Dry</td>\n",
+       "      <td>Daylight</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>23</td>\n",
+       "      <td>From same direction - all others</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2</td>\n",
+       "      <td>-122.306426</td>\n",
+       "      <td>47.545739</td>\n",
+       "      <td>17700</td>\n",
+       "      <td>17700</td>\n",
+       "      <td>1807429</td>\n",
+       "      <td>Matched</td>\n",
+       "      <td>Intersection</td>\n",
+       "      <td>34387.0</td>\n",
+       "      <td>SWIFT AVE S AND SWIFT AV OFF RP</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Wet</td>\n",
+       "      <td>Daylight</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4028032.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Entering at angle</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 37 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   SEVERITYCODE           X          Y  INCKEY  COLDETKEY REPORTNO   STATUS  \\\n",
+       "1             2 -122.323148  47.703140    1307       1307  3502005  Matched   \n",
+       "2             1 -122.347294  47.647172   52200      52200  2607959  Matched   \n",
+       "3             1 -122.334540  47.607871   26700      26700  1482393  Matched   \n",
+       "4             1 -122.334803  47.604803    1144       1144  3503937  Matched   \n",
+       "5             2 -122.306426  47.545739   17700      17700  1807429  Matched   \n",
+       "\n",
+       "       ADDRTYPE   INTKEY                                     LOCATION  ...  \\\n",
+       "1  Intersection  37475.0                   5TH AVE NE AND NE 103RD ST  ...   \n",
+       "2         Block      NaN   AURORA BR BETWEEN RAYE ST AND BRIDGE WAY N  ...   \n",
+       "3         Block      NaN  4TH AVE BETWEEN SENECA ST AND UNIVERSITY ST  ...   \n",
+       "4         Block      NaN     2ND AVE BETWEEN MARION ST AND MADISON ST  ...   \n",
+       "5  Intersection  34387.0              SWIFT AVE S AND SWIFT AV OFF RP  ...   \n",
+       "\n",
+       "  ROADCOND                LIGHTCOND  PEDROWNOTGRNT SDOTCOLNUM SPEEDING  \\\n",
+       "1      Wet                 Daylight            NaN        NaN      NaN   \n",
+       "2      Wet  Dark - Street Lights On            NaN  6354039.0      NaN   \n",
+       "3      Dry                 Daylight            NaN  4323031.0      NaN   \n",
+       "4      Dry                 Daylight            NaN        NaN      NaN   \n",
+       "5      Wet                 Daylight            NaN  4028032.0      NaN   \n",
+       "\n",
+       "   ST_COLCODE                                         ST_COLDESC  SEGLANEKEY  \\\n",
+       "1          10                                  Entering at angle           0   \n",
+       "2          11  From same direction - both going straight - bo...           0   \n",
+       "3          32                             One parked--one moving           0   \n",
+       "4          23                   From same direction - all others           0   \n",
+       "5          10                                  Entering at angle           0   \n",
+       "\n",
+       "   CROSSWALKKEY HITPARKEDCAR  \n",
+       "1             0            N  \n",
+       "2             0            N  \n",
+       "3             0            N  \n",
+       "4             0            N  \n",
+       "5             0            N  \n",
+       "\n",
+       "[5 rows x 37 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# All required script for prep work of 3. Data Prep\n",
+    "df_raw.set_index('OBJECTID', inplace=True) # The ObjectID column can be set as index colum\n",
+    "df_raw.index.name = None # Remove the index name, happy df is happy\n",
+    "df_raw.head()\n",
+    "\n",
+    "print('Happy df is happy!')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4. Modeling\n",
+    "\n",
+    "Build the model, in this case supervised machine learing (see paper)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# All required script for 4. Modeling"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "5. Evaluation\n",
+    "\n",
+    "Check the results if they allow for 1. Bus.Und. to be achieved. Think of R2 rules\n",
+    "Make sure that all is clear why it works or not."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# All script for 5. Evaluation"
    ]
   }
  ],
